--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
   <canvas id="canvas1" width="400" height="300" class="person"></canvas>
   <canvas id="canvas2" width="400" height="300" class="kycdocument"></canvas>
 
-  <img id="myImage1" src="lenin.jpg"  width="720" height="560" hidden />
-  <img id="myImage2" src="mayank.jpg"  width="720" height="560" hidden/>
+  <img id="myImage1" src=""  width="720" height="560" hidden />
+  <img id="myImage2" src=""  width="720" height="560" hidden/>
 
   <script src="photo.js"></script>
   <!-- <script src="myscript.js"></script> -->
