--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <!-- <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
   <link rel="stylesheet" href="main.css">
   <title>Document</title>
   <script src="face-api.min.js"></script>
@@ -30,12 +37,12 @@
 
   <div class="booth">
     <video id="video" width="400" height="300"></video>
-    <a href="#" id="capture" class="booth-capture-button">Take Your Photo</a>
-    <a href="#" id="capture1" class="booth-capture-button">Take KYC Document</a>
+    <a href="#" id="capture" class="btn btn-primary" >Take Your Photo</a>
+    <a href="#" id="capture1" class="btn btn-primary">Take KYC Document</a>
     
     <div align="center">
       <br><br><br><br>
-      <a href="#detecting" id="startdetect" class="booth-capture-button">Match Photos</a>
+      <a href="#detecting" id="startdetect" class="btn btn-success">Match Photos</a>
  
      </div>
       <div id="detecting">
